--- a/src/druid.properties
+++ b/src/druid.properties
@@ -2,9 +2,9 @@ driverClassName=com.mysql.jdbc.Driver
 url=jdbc:mysql://localhost:3306/java9
 username=root
 password=root
-# åˆå§‹åŒ–è¿æ¥æ•°é‡
+# ³õÊ¼»¯Á¬½ÓÊıÁ¿
 initialSize=5
-# æœ€å¤§è¿æ¥æ•°
+# ×î´óÁ¬½ÓÊı
 maxActive=10
-# æœ€å¤§ç­‰å¾…æ—¶é—´
+# ×î´óµÈ´ıÊ±¼ä
 maxWait=3000
